--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width , initial-scale=1.0">
 	<title>Spondon</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
@@ -39,7 +41,7 @@
 <!----About section start---->
 <section class="about" id="about">
     <div class="main">
-        <img src="">
+        <img src="https://cdn.discordapp.com/attachments/1176488540385841253/1192507136123617360/004-fotor-20240104223715.png?ex=65a953d0&is=6596ded0&hm=37ddbc1f7017adadc172c0f28a276459481b44ef9c78cec684700400efb94133&">
         <div class="about-text">
             <h2>About Me</h2>
             <h5>Developer <span>& Guitarist</span></h5>
