--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width , initial-scale=1.0">
 	<title>Spondon</title>
+	<link rel="icon" href="https://cdn.discordapp.com/attachments/1176488540385841253/1192519972153466900/746842.png?ex=65a95fc5&is=6596eac5&hm=b18c1c24b93e4445a02b17828c694c2215b8be32e8e00d892b5f3fa6096669b4&">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
