--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width , initial-scale=1.0">
-	<title>Spondon</title>
-	<link rel="icon" href="https://cdn.discordapp.com/attachments/1176488540385841253/1192519972153466900/746842.png?ex=65a95fc5&is=6596eac5&hm=b18c1c24b93e4445a02b17828c694c2215b8be32e8e00d892b5f3fa6096669b4&">
+	<title>Spondon - Portfolio</title>
+	<link rel="icon" href="https://cdn.discordapp.com/attachments/1176488540385841253/1211991292838674453/AP1omF6o824TwAAAAASUVORK5CYII.png?ex=65f035d9&is=65ddc0d9&hm=275918ff4dc012b6aa0578d655100cb5298c2715e4abf81d07d7b1b518cfe076&">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -42,7 +42,7 @@
 <!----About section start---->
 <section class="about" id="about">
     <div class="main">
-        <img src="https://cdn.discordapp.com/attachments/974357585299906630/1206274876407681084/004-fotor-20240211222254.png?ex=65db6a06&is=65c8f506&hm=dd383fe23119da6c63d64128d0f3bfe4a828bdc3b1dd41465cbac1b0d4fb6bb7&">
+        <img src="https://cdn.discordapp.com/attachments/1176488540385841253/1211982833611051010/Untitled_Project-fotor-20240227162648.png?ex=65f02df9&is=65ddb8f9&hm=b16b619226ee23b31130d9cb6c8d572df8e8b69b5fdbcf77fcf4b0326113c04a&">
         <div class="about-text">
             <h2>About Me</h2>
             <h5>Developer <span>& Guitarist</span></h5>
